Added efficient webpage scraping